# elysia-os

./: .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix  runner.rs  rust-toolchain.toml
.cargo/: config.toml
elysia-os-lib/: Cargo.toml
elysia-os-lib/src/: errors.rs  lib.rs  numbers.rs  raw_syscalls.rs  syscalls.rs  utils.rs
elysiaos-syslib/: Cargo.toml  cbindgen.toml  elysia_sys.h
elysiaos-syslib/src/: c_wrapper.rs  errors.rs  lib.rs  numbers.rs  syscalls.rs
elysiaos-syslib/src/syscalls/: filesystem.rs  object.rs
kernel/: Cargo.toml  build.rs
kernel/.cargo/: config.toml
kernel/src/: exception_interrupt.rs  gdt.rs  graphics.rs  hardware_interrupt.rs  interrupts.rs  lib.rs  main.rs  misc.rs  object.rs  os.rs  testing.rs  tss.rs  utils.rs  vga_print.rs
kernel/src/acpi/: mod.rs
kernel/src/filesystem/: block_device.rs  errors.rs  info.rs  mod.rs  path.rs  storage_operator.rs  vfs.rs  vfs_operations.rs  vfs_traits.rs
kernel/tests/: acpi.rs  basic_raw.rs  deadlock.rs  filesystem.rs  heap.rs  idt_init.rs  init.rs  memory_mapping.rs  multitask.rs  pagefault.rs  stack_overflow.rs  syscall.rs
libc-test/: a.out  build.sh  crt0.s  main.c  test.elf  user_app
misc/patches/: gcc.patch
src/: driver.rs  exception_interrupt.rs  gdt.rs  hardware_interrupt.rs  heap.rs  heap_allocators.rs  interrupts.rs  keyboard.rs  lib.rs  main.rs  misc.rs  os.rs  paging.rs  panic_handler.rs  serial_print.rs  testing.rs  tss.rs  vga_print.rs
src/acpi/: handler.rs  init.rs  mod.rs
src/driver/: mod.rs
src/filesystem/: errors.rs  mod.rs  path.rs  tests.rs  vfs.rs
src/heap_allocators/: fixed_block_size.rs
src/memory/: heap.rs  mapping.rs  mod.rs  page_table_wrapper.rs  paging.rs  utils.rs
src/multitasking/: blocked.rs  context.rs  executor.rs  exit.rs  manager.rs  memory.rs  mod.rs  process.rs  scheduling.rs  switch.rs  task.rs  yielding.rs
src/systemcall/: call_entries.rs  entry.rs  error.rs  handling.rs  mod.rs  syscall_no.rs  syscalls_table.rs  utils.rs
src/userspace/: elf_loader.rs
test-init/: Cargo.toml
test-init/.cargo/: config.toml
test-init/src/: main.rs
tests/: acpi.rs  basic_raw.rs  deadlock.rs  filesystem.rs  heap.rs  idt_init.rs  init.rs  memory_mapping.rs  pagefault.rs  stack_overflow.rs  syscall.rs  vga_print.rs
(+118 files in other folders)
