[package]
name = "elysia-os"
version = "0.1.0"
edition = "2024"

# abort on panic
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.test]
panic = "unwind"

[dependencies]
x86_64 = "0.15.4"
xmas-elf = "0.10.0"
acpi = "6.0.1"
bootloader = { version = "0.9", features = ["map_physical_memory"]}
volatile = "0.6.1"
spin = "0.5.2"
paste = "1.0.15"
linked_list_allocator = "0.9.0"
pc-keyboard = "0.7.0"
const-random = "0.1.18"
uart_16550 = "0.2.0"
qemu-exit = "3.0.2"
pic8259 = "0.11.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.num_enum]
version = "0.7.5"
default-features = false
[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04","-serial", "stdio"
, "-display","none"]
test-success-exit-code = 33  

[[test]]
name = "stack_overflow"
harness = false

[dependencies.crossbeam-queue]
version = "0.3.11"
default-features = false
features = ["alloc"]
[dependencies.conquer-once]
version = "0.2.0"
default-features = false
[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]
